--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,15 +1,85 @@
-h1 {
-  text-align: center;
-  color: cadetblue;
-  font-size: 35px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+.container {
+  max-width: 1440px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  margin: 0 auto;
 }
 
-p {
-  color: rgb(95, 194, 161);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+.text {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+  font-size: 23px;
+  color: rgb(208, 34, 34);
+}
+
+// Site nav
+
+.site-nav {
+  display: flex;
+  align-items: center;
+  color: grey;
+}
+
+.site-nav a {
+  color: grey;
+  transition: ease-in 0.2s;
+}
+
+.site-nav a:hover {
+  color: black;
+}
+
+.site-nav-list {
+  list-style: none;
+  margin-left: auto;
+}
+
+.site-nav-list li {
+  display: inline-block;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 23px;
+}
+
+.site-nav-list li + li {
+  margin-left: 25px;
+}
+
+.logo {
+  display: block;
+  width: 250px;
+  height: 73px;
+}
+
+// About Section
+
+// .about {
+// }
+
+.about-title {
+  font-size: 48px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+  color: rgb(68, 103, 169);
   text-align: center;
+
+  margin-bottom: 75px;
+}
+
+.text-wrapper {
+  max-width: calc((1470px - 40px) / 3);
+}
+
+.description {
+  display: flex;
+}
+
+.description img {
+  display: block;
+  text-align: center;
+  width: 400px;
+  height: 160px;
 }
